<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.eventhub.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_login_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/eventhub_logo"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username"
            app:boxBackgroundColor="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_login_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@={viewModel.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_login_username_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_error"
            android:textColor="@color/colorError"
            android:visibility="@{viewModel.usernameErrorVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/login_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/login_username"
            app:layout_constraintTop_toBottomOf="@id/login_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@null"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_username_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_login_password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_error"
            android:textColor="@color/colorError"
            android:visibility="@{viewModel.passwordErrorVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/login_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:enabled="@{viewModel.loginButtonEnabled}"
            android:onClick="@{() -> viewModel.onLogin()}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_login_password_error" />

        <TextView
            android:id="@+id/txt_login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_error"
            android:textColor="@color/colorError"
            android:visibility="@{viewModel.loginErrorVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>